# spider-summarizer-agent-workflow

./: .gitignore  README.md  main.py  makefile  pyproject.toml
.github/workflows/: ci.yaml
src/curator/: curator.py  test_curator.py
src/instructions/: instructions.py
src/model/: model.py
src/scrape_tools/: scrape_tools.py  test_scrape_tools.py
src/workflow/: test_workflow.py  workflow.py
src/writer/: test_writer.py  writer.py
testing/: mocks.py
